Fix spacing on navbar

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -35,6 +35,7 @@
 @media only screen and (min-width: 481px){
   #main-area{
     justify-content: space-around;
+    padding-top: 60px;
   
     
     .area-section{
